# glep63-check

./: glep63-check  pyproject.toml  report-bugs.bash  setup.py  tox.ini
glep63/: __init__.py  __main__.py  base.py  check.py  cli.py  gnupg.py  specs.py
tests/: create-test.py  key_base.py  nistp256.gpg  rsa1024-4096.gpg  rsa2048-good.gpg  rsa4096-good.gpg  test_key_algos.py  test_key_expiration.py  test_key_other.py
tests/algos/: dsa1024-rsa4096.gpg  dsa2048-rsa4096.gpg  ed25519.gpg  nistp256.gpg  rsa1024-4096.gpg  rsa2048-good.gpg  rsa4096-2048.gpg  rsa4096-dsa2048.gpg  rsa4096-good.gpg
tests/expiration/: primary-1w.gpg  primary-2y.gpg  primary-3w.gpg  primary-3y.gpg  primary-5y.gpg  primary-6y.gpg  primary-noexpire.gpg  subkey-1w.gpg  subkey-1y.gpg  subkey-2y.gpg  subkey-3w.gpg  subkey-3y.gpg  subkey-5y.gpg  subkey-6y.gpg  subkey-noexpire.gpg  two-subkeys-1w-1y.gpg
tests/other/: expired-key.gpg  multipurpose-subkey.gpg  no-encryption-subkey.gpg  no-gentoo-uid.gpg  no-signing-subkey.gpg  revoked-gentoo-uid.gpg  revoked-key.gpg  revoked-short-subkey.gpg  revoked-subkey-only.gpg
