[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "glep63-check"
authors = [{name = "Michał Górny", email = "mgorny@gentoo.org"}]
dynamic = ["version", "description"]
license = {file = "COPYING"}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: POSIX',
    'Programming Language :: Python',
    'Topic :: Security :: Cryptography',
]

[project.scripts]
glep63-check = "glep63.__main__:entry_point"

[project.urls]
Homepage = "https://github.com/mgorny/glep63-check/"

[tool.flit.module]
name = "glep63"
